--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@parcel/packager-ts": "^2.12.0",
+    "@parcel/transformer-inline-string": "^2.12.0",
     "@parcel/transformer-typescript-types": "^2.11.0",
     "typescript": "^5.3.3"
   }
