--- a/packages/geometry/package.json
+++ b/packages/geometry/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@webgpu/types": "^0.1.40",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "parcel": "^2.11.0",
