--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
       "./src/**/*.ts"
     ],
     "moduleNameMapper": {
-      "^src/(.*)$": "<rootDir>/src/$1"
+      "^src/(.*)$": "<rootDir>/src/$1",
+      "^tests/(.*)$": "<rootDir>/tests/$1"
     },
     "preset": "ts-jest",
     "setupFiles": [
@@ -39,24 +40,47 @@
     ],
     "testEnvironment": "jsdom",
     "testMatch": [
-      "<rootDir>/tests/**/*.test.ts"
+      "<rootDir>/tests/**/*.test.ts",
+      "<rootDir>/src/**/*.test.ts"
+    ],
+    "transform": {
+      ".*\\.(ts|js)$": "ts-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(wgpu-matrix)/)"
     ],
     "verbose": true
   },
+  "prettier": {
+    "plugins": [
+      "@trivago/prettier-plugin-sort-imports"
+    ],
+    "importOrder": [
+      "<THIRD_PARTY_MODULES>",
+      "^src/(.*)$",
+      "^test/(.*)$",
+      "^../(.*)$",
+      "^./(.*)$"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true
+  },
   "devDependencies": {
     "@parcel/transformer-inline-string": "^2.12.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jest": "^29.5.12",
     "@webgpu/types": "^0.1.40",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.12.0",
+    "prettier": "3.3.2",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.6.0"
   },
   "dependencies": {
-    "wgpu-matrix": "^2.8.0"
+    "wgpu-matrix": "^3.0.1"
   }
 }
