--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "alwaysStrict": true,
     "baseUrl": ".",
     "esModuleInterop": true,
@@ -13,7 +14,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "paths": {
-      "src/*": ["src/*"]
+      "src/*": ["src/*"],
+      "tests/*": ["tests/*"]
     },
     "strict": true,
     "strictNullChecks": true,
